--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <base href="/" />
-<meta name="liquid-windows-store/config/environment" content="%7B%22modulePrefix%22%3A%22liquid-windows-store%22%2C%22environment%22%3A%22production%22%2C%22baseURL%22%3A%22/%22%2C%22locationType%22%3A%22auto%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%7D%2C%22APP%22%3A%7B%22name%22%3A%22liquid-windows-store%22%2C%22version%22%3A%220.0.0.1e2e7222%22%7D%2C%22contentSecurityPolicy%22%3A%7B%22default-src%22%3A%22%27none%27%22%2C%22script-src%22%3A%22%27self%27%20https%3A//cdn.mxpnl.com%22%2C%22font-src%22%3A%22%27self%27%20http%3A//fonts.gstatic.com%20http%3A//i.s-microsoft.com%22%2C%22connect-src%22%3A%22%27self%27%20https%3A//api.mixpanel.com%20http%3A//custom-api.local%22%2C%22img-src%22%3A%22%27self%27%20http%3A//placehold.it%20http%3A//store-images.microsoft.com%22%2C%22style-src%22%3A%22%27self%27%20%27unsafe-inline%27%20http%3A//fonts.googleapis.com%22%2C%22media-src%22%3A%22%27self%27%22%7D%2C%22FIXTURES%22%3A%7B%22enabled%22%3Atrue%7D%2C%22contentSecurityPolicyHeader%22%3A%22Content-Security-Policy-Report-Only%22%2C%22exportApplicationGlobal%22%3Afalse%7D" />
+    <base href="/liquid-windows-store/" />
+<meta name="liquid-windows-store/config/environment" content="%7B%22modulePrefix%22%3A%22liquid-windows-store%22%2C%22environment%22%3A%22production%22%2C%22baseURL%22%3A%22/liquid-windows-store%22%2C%22locationType%22%3A%22auto%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%7D%2C%22APP%22%3A%7B%22name%22%3A%22liquid-windows-store%22%2C%22version%22%3A%220.0.0.40c06df9%22%7D%2C%22contentSecurityPolicy%22%3A%7B%22default-src%22%3A%22%27none%27%22%2C%22script-src%22%3A%22%27self%27%20https%3A//cdn.mxpnl.com%22%2C%22font-src%22%3A%22%27self%27%20http%3A//fonts.gstatic.com%20http%3A//i.s-microsoft.com%22%2C%22connect-src%22%3A%22%27self%27%20https%3A//api.mixpanel.com%20http%3A//custom-api.local%22%2C%22img-src%22%3A%22%27self%27%20http%3A//placehold.it%20http%3A//store-images.microsoft.com%22%2C%22style-src%22%3A%22%27self%27%20%27unsafe-inline%27%20http%3A//fonts.googleapis.com%22%2C%22media-src%22%3A%22%27self%27%22%7D%2C%22FIXTURES%22%3A%7B%22enabled%22%3Atrue%7D%2C%22contentSecurityPolicyHeader%22%3A%22Content-Security-Policy-Report-Only%22%2C%22exportApplicationGlobal%22%3Afalse%7D" />
 
     <link rel="stylesheet" href="assets/vendor-cd0e6245db53e188861c5018263dfa97.css">
     <link rel="stylesheet" href="assets/liquid-windows-store-2e12c7e57c20d9e0a04165fff3f800b9.css">
@@ -19,7 +19,7 @@
     
 
     <script src="assets/vendor-79647f725fcc6ec8fdfdee85f650265c.js"></script>
-    <script src="assets/liquid-windows-store-d8497e8b142e111d600ef906ba381ef8.js"></script>
+    <script src="assets/liquid-windows-store-2cb8f7a52c4bdd78ba29ec89dfb99745.js"></script>
 
     
   </body>
